--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -7,9 +7,9 @@
         android:id="@+id/file_item_open"
         android:title="@string/open" />
     <item
-        android:id="@+id/file_manager_menu_clear_selection"
+        android:id="@+id/file_item_rename"
         android:title="@string/rename" />
     <item
-        android:id="@+id/file_manager_menu_delete"
+        android:id="@+id/file_item_delete"
         android:title="@string/delete" />
 </menu>
