--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -12,4 +12,10 @@
     <item
         android:id="@+id/file_item_delete"
         android:title="@string/delete" />
+    <item
+        android:id="@+id/file_item_move"
+        android:title="@string/action_move" />
+    <item
+        android:id="@+id/file_item_copy"
+        android:title="@string/action_copy" />
 </menu>
